fix: update frame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ project(fast_cpp_server)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 # 全局禁用 warning
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
 
@@ -30,6 +32,8 @@ include_directories(
     ${PROJECT_SOURCE_DIR}/src/tools/simple_tcp_client
     ${PROJECT_SOURCE_DIR}/src/tools/thread_safe_buffer
     ${PROJECT_SOURCE_DIR}/src/tools/ping_tools
+    ${PROJECT_SOURCE_DIR}/src/tools/system_healthy
+    ${PROJECT_SOURCE_DIR}/src/tools/example
     ${PROJECT_SOURCE_DIR}/external/spdlog/include
     ${PROJECT_SOURCE_DIR}/external/libzmq/include
 )
@@ -77,6 +81,8 @@ file(
     "src/tools/simple_tcp_client/*.cpp"
     "src/tools/thread_safe_buffer/*.cpp"
     "src/tools/ping_tools/*.cpp"
+    "src/tools/system_healthy/*.cpp"
+    "src/tools/example/*.cpp"
 )
 
 # 从源文件列表中移除 main.cpp
