--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -22,14 +22,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag fast_cpp_dev:latest
+
+    - name: Build Container with fast_cpp_dev
+      run: docker run -it --name fast_cpp_dev_env -v ${{github.workspace}}:/workspace fast_cpp_dev:latest /bin/bash 
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cd /workspace/build && cmake .. && make -j
 
     - name: Test
       working-directory: ${{github.workspace}}/build
