--- a/.github/workflows/build_on_linux_host.yml
+++ b/.github/workflows/build_on_linux_host.yml
@@ -24,10 +24,10 @@ jobs:
 
     - name: Install env
       run: |
-        apt-get update
-        apt-get upgrade -y
-        apt-get install -y build-essential gcc g++ cmake git curl wget unzip gcovr nginx doxygen graphviz graphviz-dev python3.12 python3-pip libssl-dev libcurl4-openssl-dev clangd-14
-        apt-get clean
+        sudo apt-get update
+        sudo apt-get upgrade -y
+        sudo apt-get install -y build-essential gcc g++ cmake git curl wget unzip gcovr nginx doxygen graphviz graphviz-dev python3.12 python3-pip libssl-dev libcurl4-openssl-dev clangd-14
+        sudo apt-get clean
       # run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Download external and build target folder
