--- a/.github/workflows/build_on_linux_host.yml
+++ b/.github/workflows/build_on_linux_host.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get upgrade -y
-        sudo apt-get install -y build-essential gcc g++ cmake git curl wget unzip gcovr nginx doxygen graphviz graphviz-dev python3.12 python3-pip libssl-dev libcurl4-openssl-dev clangd-14
+        sudo apt-get install -y build-essential gcc g++ cmake git curl wget unzip gcovr nginx doxygen graphviz graphviz-dev python3.12 python3-pip libssl-dev libcurl4-openssl-dev clangd-14 libgmp-dev
         sudo apt-get clean
 
     - name: Download external and Build target folder
