--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ add_subdirectory(external/libzmq)
 
 # --------------------- OpenCV 设置 ---------------------
 # 指定需要构建的模块（可按需调整）
-set(BUILD_LIST core,imgproc,highgui,imgcodecs,videoio,calib3d,features2d)
+set(BUILD_LIST core,imgproc,highgui,imgcodecs,videoio,calib3d,features2d,dnn)
 # 是否构建为静态库
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build static libs")
 # opencv contrib 路径（可选）
@@ -208,6 +208,7 @@ set(THIRD_INCLUDE_DIRECTORIES
     ${PROJECT_SOURCE_DIR}/external/opencv/modules/calib3d/include
     ${PROJECT_SOURCE_DIR}/external/opencv/modules/features2d/include
     ${PROJECT_SOURCE_DIR}/external/opencv/modules/flann/include
+    ${PROJECT_SOURCE_DIR}/external/opencv/modules/dnn/include
     ${PROJECT_SOURCE_DIR}/build                                     # OpenCV 编译后的头文件路径
     ${PROJECT_SOURCE_DIR}/build/external/symengine                  # SymEngine 编译后的头文件路径
 )
@@ -245,6 +246,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE opencv_videoio)
 target_link_libraries(${PROJECT_NAME} PRIVATE opencv_calib3d)
 target_link_libraries(${PROJECT_NAME} PRIVATE opencv_features2d)
 target_link_libraries(${PROJECT_NAME} PRIVATE opencv_flann)
+target_link_libraries(${PROJECT_NAME} PRIVATE opencv_dnn)
 
 # 链接 Engine（Eigen 是头文件库，不需要 link）
 # 链接 SymEngine
@@ -267,6 +269,7 @@ add_dependencies(mylib opencv_highgui)
 add_dependencies(mylib opencv_imgcodecs)
 add_dependencies(mylib opencv_videoio)
 add_dependencies(mylib opencv_calib3d)
+add_dependencies(mylib opencv_dnn)
 add_dependencies(opencv_calib3d opencv_features2d)
 add_dependencies(opencv_features2d opencv_flann)
 
